--- a/conf/graphite/aggregation-rules.conf
+++ b/conf/graphite/aggregation-rules.conf
@@ -33,3 +33,7 @@
 #   <env>.applications.<app>.all.<app_metric> (60) = sum <env>.applications.<app>.*.<<app_metric>>
 #
 # Note that any time this file is modified, it will be re-read automatically.
+
+wpstats.totals.<metric> (10) = sum wpstats.site*.webmaster*.<metric>
+wpstats.totals.<webmaster>.<metric> (10) = sum wpstats.site*.<webmaster>.<metric>
+wpstats.totals.<site>.<metric> (10) = sum wpstats.<site>.webmaster*.<metric>
