--- a/conf/graphite/storage-schemas.conf
+++ b/conf/graphite/storage-schemas.conf
@@ -12,6 +12,6 @@
 pattern = ^carbon\.
 retentions = 10s:6h,1min:90d
 
-[default_1min_for_1day]
-pattern = .*
-retentions = 10s:6h,1min:6d,10min:1800d
+[wpstats]
+pattern = ^wpstats\.
+retentions = 1d:10y
